Updating matplotlib snippets to show some common ML plots I remember from coursera (my own simulations).

--- a/matplotlib/3 - Plots.ipynb
+++ b/matplotlib/3 - Plots.ipynb
@@ -776,7 +776,9 @@
     "\n",
     "Each list of lists is intepretted as its own plot with corresponding x and y put together.\n",
     "\n",
-    "This is how the RNN music generation lab makes a piano roll!"
+    "This is how the RNN music generation lab makes a piano roll!\n",
+    "\n",
+    "NOTE: another way to say it (the way the docs say) is that if the inputs are 2D arrays, then each column of the array is a connected plot (dataset)."
    ]
   },
   {
