--- a/TensorFlow/Tensor Shapes & Routing.ipynb
+++ b/TensorFlow/Tensor Shapes & Routing.ipynb
@@ -11,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d41d7981",
    "metadata": {},
@@ -48,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3729e34b",
    "metadata": {},
@@ -75,6 +77,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1c5a2a1d",
    "metadata": {},
@@ -107,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "817bcd2c",
    "metadata": {},
@@ -142,6 +146,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31a92202",
    "metadata": {},
@@ -173,6 +178,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "76bfaa9b",
    "metadata": {},
@@ -205,6 +211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c737c65",
    "metadata": {},
@@ -236,6 +243,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4298d15f",
    "metadata": {},
@@ -291,6 +299,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f92b3f37",
    "metadata": {},
@@ -364,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a80cb9c1",
    "metadata": {},
@@ -414,7 +424,7 @@
    "source": [
     "class SplitLayer(tf.keras.layers.Layer):\n",
     "    def __init__(self):\n",
-    "      super(SplitLayer, self).__init__()\n",
+    "      super().__init__()\n",
     "      \n",
     "    def call(self, inputs):\n",
     "      return (inputs[:,:5], inputs[:,5:])  # You could skip the whole class and just do left,right = (inputs....\n",
@@ -434,6 +444,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d47a4579",
    "metadata": {},
@@ -472,6 +483,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dbf104d4",
    "metadata": {},
@@ -480,6 +492,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "73cd11fd",
    "metadata": {},
@@ -507,6 +520,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "01d10f40",
    "metadata": {},
@@ -555,6 +569,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8a11217",
    "metadata": {},
@@ -616,6 +631,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bbf5c62d",
    "metadata": {},
@@ -624,6 +640,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cb492ec6",
    "metadata": {},
@@ -632,6 +649,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e4f29156",
    "metadata": {},
@@ -661,6 +679,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3973db1e",
    "metadata": {},
@@ -691,6 +710,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "191357e8",
    "metadata": {},
@@ -724,6 +744,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0e4ab2ec",
    "metadata": {},
