Formatting snippet notebooks with VSCode.

--- a/TensorFlow/GPU vs. CPU.ipynb
+++ b/TensorFlow/GPU vs. CPU.ipynb
@@ -9,20 +9,20 @@
    "source": [
     "import tensorflow as tf\n",
     "\n",
+    "\n",
     "def make_tensor():\n",
-    "    return tf.constant([[1, 2, 3],\n",
-    "                        [4, 5, 6],\n",
-    "                        [7, 8, 9]])"
+    "    return tf.constant([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "39b29eb6",
    "metadata": {},
    "source": [
     "## GPU Default\n",
     "\n",
-    "On my systems, GPU is configured, so tensors are created on __GPU by default__."
+    "On my systems, GPU is configured, so tensors are created on **GPU by default**.\n"
    ]
   },
   {
@@ -55,11 +55,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4b1aea89",
    "metadata": {},
    "source": [
-    "## Manual Override to CPU"
+    "## Manual Override to CPU\n"
    ]
   },
   {
@@ -86,11 +87,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "41eaae5c",
    "metadata": {},
    "source": [
-    "## Operations Stay on CPU"
+    "## Operations Stay on CPU\n"
    ]
   },
   {
@@ -118,11 +120,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bdb38a5d",
    "metadata": {},
    "source": [
-    "## Operations Themselves Don't Move to GPU (even in GPU context)"
+    "## Operations Themselves Don't Move to GPU (even in GPU context)\n"
    ]
   },
   {
@@ -146,17 +149,18 @@
     "    t = make_tensor()\n",
     "with tf.device('/GPU:0'):\n",
     "    print(t.device)\n",
-    "    t = t**2      # The **2 operation makes a new tensor but it is still CPU despite the context\n",
+    "    t = t**2  # The **2 operation makes a new tensor but it is still CPU despite the context\n",
     "    print(t.device)\n",
     "print(t.device)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31c30d6e",
    "metadata": {},
    "source": [
-    "## Moving to GPU"
+    "## Moving to GPU\n"
    ]
   },
   {
@@ -177,16 +181,19 @@
     "with tf.device('/CPU:0'):\n",
     "    t = make_tensor()\n",
     "with tf.device('/GPU:0'):\n",
-    "    t = tf.identity(t)  # This makes a new tensor without doing operations, so it successfully moves to GPU\n",
+    "    t = tf.identity(\n",
+    "        t\n",
+    "    )  # This makes a new tensor without doing operations, so it successfully moves to GPU\n",
     "    print(t.device)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8fcfb0ba",
    "metadata": {},
    "source": [
-    "## Mixed Device Operations"
+    "## Mixed Device Operations\n"
    ]
   },
   {
@@ -213,15 +220,18 @@
     "v = t + u\n",
     "print(t.device)  # Original stays on the CPU\n",
     "print(u.device)  # Original stays on the GPU\n",
-    "print(v.device)  # Result is in GPU because that's preferred (presumably t had to be copied there)"
+    "print(\n",
+    "    v.device\n",
+    ")  # Result is in GPU because that's preferred (presumably t had to be copied there)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90ef7413",
    "metadata": {},
    "source": [
-    "## Python Code Against GPU Tensor"
+    "## Python Code Against GPU Tensor\n"
    ]
   },
   {
@@ -249,11 +259,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1eefebd2",
    "metadata": {},
    "source": [
-    "## Keras Conversion to GPU"
+    "## Keras Conversion to GPU\n"
    ]
   },
   {
@@ -278,7 +289,8 @@
     "    output_layer = tf.keras.layers.Dense(5)(input_layer)\n",
     "    model = tf.keras.Model(inputs=input_layer, outputs=output_layer)\n",
     "    print(model(t).device)\n",
-    "print(model(t).device)  # Only the context of the model call matters (and defaults to GPU)"
+    "print(model(t).device\n",
+    "     )  # Only the context of the model call matters (and defaults to GPU)\n"
    ]
   },
   {
