--- a/manim/01 - Setup and Execution.ipynb
+++ b/manim/01 - Setup and Execution.ipynb
@@ -1,31 +1,34 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "15201355",
    "metadata": {},
    "source": [
-    "## Installation"
+    "## Installation\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fe4dfa65",
    "metadata": {},
    "source": [
     "Try the steps at https://docs.manim.community/en/stable/installation/conda.html first.\n",
     "\n",
-    "On Mac, I also did these steps but I'm not sure if they contributed anything beyond the conda ones: https://docs.manim.community/en/stable/installation/macos.html.  Make sure to install Latex as well so that text objects will work (https://docs.manim.community/en/stable/installation/macos.html#optional-dependencies)\n",
+    "On Mac, I also did these steps but I'm not sure if they contributed anything beyond the conda ones: https://docs.manim.community/en/stable/installation/macos.html. Make sure to install Latex as well so that text objects will work (https://docs.manim.community/en/stable/installation/macos.html#optional-dependencies)\n",
     "\n",
-    "In addition, for Jupyter notebook purposes, https://docs.manim.community/en/stable/installation/jupyter.html#google-colaboratory.  On Mac I used brew and tried to install as many of those as I could (not sure which are necessary since I did it before doing the conda steps). A lot of the libraries weren't on brew."
+    "In addition, for Jupyter notebook purposes, https://docs.manim.community/en/stable/installation/jupyter.html#google-colaboratory. On Mac I used brew and tried to install as many of those as I could (not sure which are necessary since I did it before doing the conda steps). A lot of the libraries weren't on brew.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1cefdcda",
    "metadata": {},
    "source": [
-    "## Jupyter Notebook Execution"
+    "## Jupyter Notebook Execution\n"
    ]
   },
   {
@@ -291,17 +294,20 @@
     "\n",
     "# Embedding video files directly.\n",
     "#Video(\"media/videos/manim/720p30/SquareToCircle.mp4\", width=720)\n",
-    "Video(\"media/videos/manim/1080p60/SquareToCircle.mp4\", width=1080, html_attributes=\"controls loop autoplay\")"
+    "Video(\"media/videos/manim/1080p60/SquareToCircle.mp4\",\n",
+    "      width=1080,\n",
+    "      html_attributes=\"controls loop autoplay\")\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "98354f09",
    "metadata": {},
    "source": [
     "## Shell Execution\n",
     "\n",
-    "In general, manim CLI calls look like mangim magic calls but you need the -p flag to point to a file."
+    "In general, manim CLI calls look like mangim magic calls but you need the -p flag to point to a file.\n"
    ]
   },
   {
@@ -397,7 +403,9 @@
     "from IPython.display import Video\n",
     "\n",
     "# Note the path is based on the file instead of the magic we used above (and different default resolution).\n",
-    "Video(\"media/videos/example/480p15/CreateCircle.mp4\", width=480, html_attributes=\"controls loop autoplay\")"
+    "Video(\"media/videos/example/480p15/CreateCircle.mp4\",\n",
+    "      width=480,\n",
+    "      html_attributes=\"controls loop autoplay\")\n"
    ]
   },
   {
