--- a/manim/03 - Mobjects.ipynb
+++ b/manim/03 - Mobjects.ipynb
@@ -27,13 +27,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4205e0fd",
    "metadata": {},
    "source": [
     "## mobject\n",
     "\n",
-    "Mobject is the __abstract base class__ of objects you can create in manim.  Most of the objects we use will be a subclass of Mobject called __VMobject__ which is a __vector object__."
+    "Mobject is the **abstract base class** of objects you can create in manim. Most of the objects we use will be a subclass of Mobject called **VMobject** which is a **vector object**.\n"
    ]
   },
   {
@@ -63,13 +64,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0dbbd7ea",
    "metadata": {},
    "source": [
     "## Displaying Statically\n",
     "\n",
-    "You can add/remove an object in a scene without using the creation animation like seen in the basic notebook."
+    "You can add/remove an object in a scene without using the creation animation like seen in the basic notebook.\n"
    ]
   },
   {
@@ -110,11 +112,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "304ee5e1",
    "metadata": {},
    "source": [
-    "## Default Values"
+    "## Default Values\n"
    ]
   },
   {
@@ -159,17 +162,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ac5c77ec",
    "metadata": {},
    "source": [
     "## Coordinate System\n",
     "\n",
-    "Manim coordinates have __origin at center__ with __positive y up__ like in math (instead of computer graphics).\n",
+    "Manim coordinates have **origin at center** with **positive y up** like in math (instead of computer graphics).\n",
     "\n",
-    "The constants LEFT, RIGHT, UP, and DOWN are basically unit vectors you can use for placement.  They are __numpy arrays__ which means you can do math on them!\n",
+    "The constants LEFT, RIGHT, UP, and DOWN are basically unit vectors you can use for placement. They are **numpy arrays** which means you can do math on them!\n",
     "\n",
-    "Note that they are also __3D__."
+    "Note that they are also **3D**.\n"
    ]
   },
   {
@@ -215,17 +219,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "923de7d5",
    "metadata": {},
    "source": [
     "## Absolute Placement and Default Sizes\n",
     "\n",
-    "The mobject method __move_to()__ lets you move to an absolute location (by its __bounding box center__).\n",
+    "The mobject method **move_to()** lets you move to an absolute location (by its **bounding box center**).\n",
     "\n",
-    "__Circles and squares__ default to a width and height of __2 units__ so that when in the center, they go 1 unit in each direction.  Triangles do not follow this.\n",
+    "**Circles and squares** default to a width and height of **2 units** so that when in the center, they go 1 unit in each direction. Triangles do not follow this.\n",
     "\n",
-    "By default, the scene width is slightly less than 14 and the scene height is slightly less than 8."
+    "By default, the scene width is slightly less than 14 and the scene height is slightly less than 8.\n"
    ]
   },
   {
@@ -274,13 +279,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d016aa2",
    "metadata": {},
    "source": [
     "## Relative Placement\n",
     "\n",
-    "Use the __next_to()__ method of mobject to place an object relative to another object.  The vector you pass in is relative to the reference object for the final location (in both __position__ and __size__).  The __buff__ parameter lets you specify (in units) an additional spacing between the objects (which has a default nonzero value)."
+    "Use the **next_to()** method of mobject to place an object relative to another object. The vector you pass in is relative to the reference object for the final location (in both **position** and **size**). The **buff** parameter lets you specify (in units) an additional spacing between the objects (which has a default nonzero value).\n"
    ]
   },
   {
@@ -319,13 +325,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5f1a3290",
    "metadata": {},
    "source": [
     "## Snapping Borders\n",
     "\n",
-    "The mobject __align_to()__ method makes a given border of the object (represented by which unit vector you pick) align to that border of the reference object."
+    "The mobject **align_to()** method makes a given border of the object (represented by which unit vector you pick) align to that border of the reference object.\n"
    ]
   },
   {
@@ -366,15 +373,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de8674a0",
    "metadata": {},
    "source": [
     "## Shifting and Chaining\n",
     "\n",
-    "Use the __shift()__ method to shift by a vector from current position.\n",
+    "Use the **shift()** method to shift by a vector from current position.\n",
     "\n",
-    "In general, __transformations are chainable__ because they return the in-place modified object reference."
+    "In general, **transformations are chainable** because they return the in-place modified object reference.\n"
    ]
   },
   {
@@ -409,11 +417,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bce8d47a",
    "metadata": {},
    "source": [
-    "## Scale"
+    "## Scale\n"
    ]
   },
   {
@@ -449,11 +458,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a653ac8d",
    "metadata": {},
    "source": [
-    "## Edges"
+    "## Edges\n"
    ]
   },
   {
@@ -489,11 +499,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0ade68ec",
    "metadata": {},
    "source": [
-    "## Appearance"
+    "## Appearance\n"
    ]
   },
   {
@@ -530,11 +541,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9cf7939a",
    "metadata": {},
    "source": [
-    "## Text"
+    "## Text\n"
    ]
   },
   {
@@ -569,11 +581,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "efca293f",
    "metadata": {},
    "source": [
-    "## Markup Text"
+    "## Markup Text\n"
    ]
   },
   {
@@ -608,11 +621,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af3e3d01",
    "metadata": {},
    "source": [
-    "## Numbers"
+    "## Numbers\n"
    ]
   },
   {
@@ -659,11 +673,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "79d4d3b2",
    "metadata": {},
    "source": [
-    "## Lines"
+    "## Lines\n"
    ]
   },
   {
@@ -698,11 +713,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c4e1e1d5",
    "metadata": {},
    "source": [
-    "## Points in Shapes"
+    "## Points in Shapes\n"
    ]
   },
   {
@@ -872,11 +888,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b871335",
    "metadata": {},
    "source": [
-    "## Line Landmarks"
+    "## Line Landmarks\n"
    ]
   },
   {
@@ -918,11 +935,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "68522f7f",
    "metadata": {},
    "source": [
-    "## Dots"
+    "## Dots\n"
    ]
   },
   {
@@ -958,11 +976,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "53da71a1",
    "metadata": {},
    "source": [
-    "## Using Numpy to Transform"
+    "## Using Numpy to Transform\n"
    ]
   },
   {
@@ -1003,11 +1022,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b147f072",
    "metadata": {},
    "source": [
-    "## Groups"
+    "## Groups\n"
    ]
   },
   {
@@ -1046,11 +1066,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a75b249e",
    "metadata": {},
    "source": [
-    "## Colors"
+    "## Colors\n"
    ]
   },
   {
