--- a/manim/04 - Animations.ipynb
+++ b/manim/04 - Animations.ipynb
@@ -27,11 +27,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3285b68b",
    "metadata": {},
    "source": [
-    "## Fade-In/Fade-Out"
+    "## Fade-In/Fade-Out\n"
    ]
   },
   {
@@ -75,11 +76,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b87d7785",
    "metadata": {},
    "source": [
-    "## Rotation"
+    "## Rotation\n"
    ]
   },
   {
@@ -120,11 +122,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9b035eb",
    "metadata": {},
    "source": [
-    "## Mobject.animate"
+    "## Mobject.animate\n"
    ]
   },
   {
@@ -167,11 +170,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "55558f36",
    "metadata": {},
    "source": [
-    "## Animation Timing"
+    "## Animation Timing\n"
    ]
   },
   {
@@ -212,11 +216,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc9ec3ab",
    "metadata": {},
    "source": [
-    "## Updater"
+    "## Updater\n"
    ]
   },
   {
@@ -260,11 +265,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c55e6c86",
    "metadata": {},
    "source": [
-    "## Custom Counter Animation"
+    "## Custom Counter Animation\n"
    ]
   },
   {
@@ -332,11 +338,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e432d153",
    "metadata": {},
    "source": [
-    "## Custom Shape Following Animation"
+    "## Custom Shape Following Animation\n"
    ]
   },
   {
@@ -384,13 +391,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9e9086c9",
    "metadata": {},
    "source": [
     "## Transforming\n",
     "\n",
-    "HINT: if you see weird vertex movements, try using np.roll() and/or flip() to improve it."
+    "HINT: if you see weird vertex movements, try using np.roll() and/or flip() to improve it.\n"
    ]
   },
   {
@@ -433,11 +441,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "49214cd4",
    "metadata": {},
    "source": [
-    "## Magnetic Object"
+    "## Magnetic Object\n"
    ]
   },
   {
