--- a/manim/05 - Camera.ipynb
+++ b/manim/05 - Camera.ipynb
@@ -27,11 +27,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20dd3317",
    "metadata": {},
    "source": [
-    "## Background Color"
+    "## Background Color\n"
    ]
   },
   {
