--- a/manim/06 - LaTeX.ipynb
+++ b/manim/06 - LaTeX.ipynb
@@ -27,13 +27,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "253dc68d",
    "metadata": {},
    "source": [
     "## LaTeX Mobject\n",
     "\n",
-    "Commands in LaTex start with \\ and take parameters in {}."
+    "Commands in LaTex start with \\ and take parameters in {}.\n"
    ]
   },
   {
@@ -67,13 +68,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf3cccbd",
    "metadata": {},
    "source": [
     "## LaTeX Inline Math\n",
     "\n",
-    "Surround math equations with 3 different syntaxes inside LaTeX.  Then you can use the typical computer math operators like ^."
+    "Surround math equations with 3 different syntaxes inside LaTeX. Then you can use the typical computer math operators like ^.\n"
    ]
   },
   {
@@ -108,13 +110,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c109891",
    "metadata": {},
    "source": [
     "## LaTeX Display Math\n",
     "\n",
-    "2 different syntaxes."
+    "2 different syntaxes.\n"
    ]
   },
   {
@@ -148,13 +151,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9f7c4878",
    "metadata": {},
    "source": [
     "## MathTex Mobject\n",
     "\n",
-    "MathTex objects automatically wrap string in $$ to make into inline math."
+    "MathTex objects automatically wrap string in $$ to make into inline math.\n"
    ]
   },
   {
@@ -188,11 +192,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c0fed00c",
    "metadata": {},
    "source": [
-    "## Subscripts and Superscripts"
+    "## Subscripts and Superscripts\n"
    ]
   },
   {
@@ -226,11 +231,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0978741b",
    "metadata": {},
    "source": [
-    "## Fractions"
+    "## Fractions\n"
    ]
   },
   {
@@ -264,11 +270,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05f441a8",
    "metadata": {},
    "source": [
-    "## Integrals"
+    "## Integrals\n"
    ]
   },
   {
@@ -302,11 +309,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "231b114e",
    "metadata": {},
    "source": [
-    "## Greek Letters"
+    "## Greek Letters\n"
    ]
   },
   {
@@ -340,11 +348,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "86aa0d18",
    "metadata": {},
    "source": [
-    "## Functions"
+    "## Functions\n"
    ]
   },
   {
@@ -378,11 +387,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ec5fef00",
    "metadata": {},
    "source": [
-    "## Summation"
+    "## Summation\n"
    ]
   },
   {
@@ -417,11 +427,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "834a14fe",
    "metadata": {},
    "source": [
-    "## Arrows"
+    "## Arrows\n"
    ]
   },
   {
@@ -455,11 +466,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e30ff44a",
    "metadata": {},
    "source": [
-    "## Special Letters"
+    "## Special Letters\n"
    ]
   },
   {
@@ -494,11 +506,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "027bece4",
    "metadata": {},
    "source": [
-    "## Extra Packages"
+    "## Extra Packages\n"
    ]
   },
   {
@@ -539,11 +552,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "42fb59b3",
    "metadata": {},
    "source": [
-    "## Substring Coloring"
+    "## Substring Coloring\n"
    ]
   },
   {
@@ -586,11 +600,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5fc118c7",
    "metadata": {},
    "source": [
-    "## Multi-line and Alignment"
+    "## Multi-line and Alignment\n"
    ]
   },
   {
