--- a/pandas/01 - Basics.ipynb
+++ b/pandas/01 - Basics.ipynb
@@ -9,22 +9,22 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def get_default_df():\n",
-    "    return pd.DataFrame({\n",
-    "        \"Name\": [\"bob\", \"john\", \"sarah\"],\n",
-    "        \"Age\": [10, 15, 20]\n",
-    "    })\n",
+    "    return pd.DataFrame({\"Name\": [\"bob\", \"john\", \"sarah\"], \"Age\": [10, 15, 20]})\n",
+    "\n",
     "\n",
     "def get_csv_df():\n",
     "    return pd.read_csv('titanic.csv')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f3faadf1",
    "metadata": {},
    "source": [
-    "## From Dictionary of Lists"
+    "## From Dictionary of Lists\n"
    ]
   },
   {
@@ -91,20 +91,18 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame({\n",
-    "    \"Name\": [\"bob\", \"john\", \"sarah\"],\n",
-    "    \"Age\": [10, 15, 20]\n",
-    "})\n",
+    "df = pd.DataFrame({\"Name\": [\"bob\", \"john\", \"sarah\"], \"Age\": [10, 15, 20]})\n",
     "\n",
     "df"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f37fb62e",
    "metadata": {},
    "source": [
-    "## From List of Dictionaries"
+    "## From List of Dictionaries\n"
    ]
   },
   {
@@ -171,21 +169,27 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame([\n",
-    "    {\"Name\": \"bob\", \"Age\": 10},\n",
-    "    {\"Name\": \"john\", \"Age\": 15},\n",
-    "    {\"Name\": \"sarah\", \"Age\": 20}\n",
-    "])\n",
+    "df = pd.DataFrame([{\n",
+    "    \"Name\": \"bob\",\n",
+    "    \"Age\": 10\n",
+    "}, {\n",
+    "    \"Name\": \"john\",\n",
+    "    \"Age\": 15\n",
+    "}, {\n",
+    "    \"Name\": \"sarah\",\n",
+    "    \"Age\": 20\n",
+    "}])\n",
     "\n",
     "df"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b88abecf",
    "metadata": {},
    "source": [
-    "## Displaying DataFrame"
+    "## Displaying DataFrame\n"
    ]
   },
   {
@@ -264,19 +268,20 @@
    "source": [
     "print(df)  # Pure text table\n",
     "\n",
-    "df # More visual table"
+    "df  # More visual table\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cffb9a0a",
    "metadata": {},
    "source": [
     "## Columns\n",
     "\n",
-    "A column from a DataFrame is a __Series__ object.\n",
+    "A column from a DataFrame is a **Series** object.\n",
     "\n",
-    "A DataFrame acts like a dictionary with __columns as keys__."
+    "A DataFrame acts like a dictionary with **columns as keys**.\n"
    ]
   },
   {
@@ -318,25 +323,27 @@
     "\n",
     "print(type(column))\n",
     "print()\n",
-    "print(column) # Basically looks like a 1-column table (almost)\n",
+    "print(column)  # Basically looks like a 1-column table (almost)\n",
     "print()\n",
     "column  # Prints the same as the print() version in this case"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0112e8e2",
    "metadata": {},
    "source": [
-    "## Series from Scratch"
+    "## Series from Scratch\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3a6f085b",
    "metadata": {},
    "source": [
-    "## Alternate Column Syntax"
+    "## Alternate Column Syntax\n"
    ]
   },
   {
@@ -389,11 +396,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5508d7e2",
    "metadata": {},
    "source": [
-    "## DataFrame Technical Info"
+    "## DataFrame Technical Info\n"
    ]
   },
   {
@@ -425,13 +433,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c852b183",
    "metadata": {},
    "source": [
     "## Numerical Data Summary\n",
     "\n",
-    "You can get a table representing numerical columns in the table with stats about them."
+    "You can get a table representing numerical columns in the table with stats about them.\n"
    ]
   },
   {
@@ -525,11 +534,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f85b64d",
    "metadata": {},
    "source": [
-    "## Individual Stats on Numerical Series"
+    "## Individual Stats on Numerical Series\n"
    ]
   },
   {
@@ -560,13 +570,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05ffe4a5",
    "metadata": {},
    "source": [
     "## Individual Stats on Whole Table\n",
     "\n",
-    "Gives you a table of that stat for __each column__."
+    "Gives you a table of that stat for **each column**.\n"
    ]
   },
   {
@@ -595,13 +606,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e83356d9",
    "metadata": {},
    "source": [
     "## Loading from CSV\n",
     "\n",
-    "Also see __compression__ and __low_memory__ options for zips and loading all into memory."
+    "Also see **compression** and **low_memory** options for zips and loading all into memory.\n"
    ]
   },
   {
@@ -871,11 +883,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2634f657",
    "metadata": {},
    "source": [
-    "## First Rows"
+    "## First Rows\n"
    ]
   },
   {
@@ -1124,11 +1137,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "36ca1d50",
    "metadata": {},
    "source": [
-    "## Last Rows"
+    "## Last Rows\n"
    ]
   },
   {
@@ -1365,11 +1379,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d1d4a05",
    "metadata": {},
    "source": [
-    "## Data Types of Columns"
+    "## Data Types of Columns\n"
    ]
   },
   {
@@ -1408,15 +1423,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "93a3633a",
    "metadata": {},
    "source": [
     "## Saving File\n",
     "\n",
-    "Existing file will be __overwritten__.\n",
+    "Existing file will be **overwritten**.\n",
     "\n",
-    "You can load and save __various formats__."
+    "You can load and save **various formats**.\n"
    ]
   },
   {
@@ -1432,6 +1448,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28aafe6e",
    "metadata": {},
@@ -1440,7 +1457,7 @@
     "\n",
     "You can use a specified column as the row number-like entity instead of the default.\n",
     "\n",
-    "You can specify by __index or name__."
+    "You can specify by **index or name**.\n"
    ]
   },
   {
@@ -1713,13 +1730,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b6dad77",
    "metadata": {},
    "source": [
     "## Series with Index Column\n",
     "\n",
-    "A series object includes the index column if it exists, but otherwise still acts the same."
+    "A series object includes the index column if it exists, but otherwise still acts the same.\n"
    ]
   },
   {
@@ -1758,13 +1776,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "409a8f0c",
    "metadata": {},
    "source": [
     "## Index Property\n",
     "\n",
-    "Related to how slicing and indexing works in pandas."
+    "Related to how slicing and indexing works in pandas.\n"
    ]
   },
   {
@@ -1791,11 +1810,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fbd282b9",
    "metadata": {},
    "source": [
-    "## String Operations"
+    "## String Operations\n"
    ]
   },
   {
