--- a/pandas/02 - Numpy-like Operations.ipynb
+++ b/pandas/02 - Numpy-like Operations.ipynb
@@ -9,16 +9,18 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def get_csv_df():\n",
     "    return pd.read_csv('titanic.csv')"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "adcfec67",
    "metadata": {},
    "source": [
-    "## Shapes"
+    "## Shapes\n"
    ]
   },
   {
@@ -44,13 +46,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c733c495",
    "metadata": {},
    "source": [
     "## Filtering Down Columns\n",
     "\n",
-    "Note you need __extra brackets__ unlike in numpy."
+    "Note you need **extra brackets** unlike in numpy.\n"
    ]
   },
   {
@@ -174,11 +177,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "49fdd205",
    "metadata": {},
    "source": [
-    "## Arbitrary Reordering/Repeating, etc."
+    "## Arbitrary Reordering/Repeating, etc.\n"
    ]
   },
   {
@@ -352,13 +356,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "657ce651",
    "metadata": {},
    "source": [
     "## Conditions\n",
     "\n",
-    "Conditions on series return a series of booleans.  Can use all the conditions you'd expect such as == and | as well."
+    "Conditions on series return a series of booleans. Can use all the conditions you'd expect such as == and | as well.\n"
    ]
   },
   {
@@ -405,11 +410,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f936610d",
    "metadata": {},
    "source": [
-    "## Arithmetic"
+    "## Arithmetic\n"
    ]
   },
   {
@@ -443,16 +449,17 @@
    "source": [
     "df = get_csv_df()\n",
     "\n",
-    "ser = df[\"Age\"] ** 2\n",
+    "ser = df[\"Age\"]**2\n",
     "ser"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7f98406b",
    "metadata": {},
    "source": [
-    "## Other Methods"
+    "## Other Methods\n"
    ]
   },
   {
@@ -491,13 +498,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f4507e67",
    "metadata": {},
    "source": [
     "## Masked Indices\n",
     "\n",
-    "A boolean series can be used to __filter rows__ from the dataframe."
+    "A boolean series can be used to **filter rows** from the dataframe.\n"
    ]
   },
   {
@@ -767,13 +775,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b285b46",
    "metadata": {},
    "source": [
     "## Subset of Rows and Columns at Same Time\n",
     "\n",
-    "The __loc__ attribute is indexable by rows,cols."
+    "The **loc** attribute is indexable by rows,cols.\n"
    ]
   },
   {
@@ -897,11 +906,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aa71fac1",
    "metadata": {},
    "source": [
-    "The __iloc__ attribute is indexable similarly but with integers."
+    "The **iloc** attribute is indexable similarly but with integers.\n"
    ]
   },
   {
@@ -1004,11 +1014,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1ec67d46",
    "metadata": {},
    "source": [
-    "## Subset of Rows"
+    "## Subset of Rows\n"
    ]
   },
   {
@@ -1131,11 +1142,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "82ca4fb3",
    "metadata": {},
    "source": [
-    "## Subset of Rows & Cols by Double Indexing"
+    "## Subset of Rows & Cols by Double Indexing\n"
    ]
   },
   {
@@ -1165,11 +1177,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d244f995",
    "metadata": {},
    "source": [
-    "## Get a single Column of a Row"
+    "## Get a single Column of a Row\n"
    ]
   },
   {
@@ -1196,11 +1209,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "85581c91",
    "metadata": {},
    "source": [
-    "## Modifying Entries"
+    "## Modifying Entries\n"
    ]
   },
   {
@@ -1462,11 +1476,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9f8bbe30",
    "metadata": {},
    "source": [
-    "## New Columns"
+    "## New Columns\n"
    ]
   },
   {
@@ -1776,13 +1791,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "adbc2cc1",
    "metadata": {},
    "source": [
     "## Rename Columns\n",
     "\n",
-    "Note that this makes a __new data frame__ instead of updating in-place."
+    "Note that this makes a **new data frame** instead of updating in-place.\n"
    ]
   },
   {
@@ -2048,19 +2064,18 @@
    "source": [
     "df = get_csv_df()\n",
     "\n",
-    "df = df.rename(columns = {\n",
-    "    'Name': 'Who?'\n",
-    "})\n",
+    "df = df.rename(columns={'Name': 'Who?'})\n",
     "\n",
     "df"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8991cb1",
    "metadata": {},
    "source": [
-    "## Remove Columns"
+    "## Remove Columns\n"
    ]
   },
   {
@@ -2293,11 +2308,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "295be221",
    "metadata": {},
    "source": [
-    "## Conversion to Numpy"
+    "## Conversion to Numpy\n"
    ]
   },
   {
@@ -2330,11 +2346,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "26cc032c",
    "metadata": {},
    "source": [
-    "## From Numpy"
+    "## From Numpy\n"
    ]
   },
   {
@@ -2404,11 +2421,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9234e532",
    "metadata": {},
    "source": [
-    "## Selective Numpy Array"
+    "## Selective Numpy Array\n"
    ]
   },
   {
