--- a/pandas/04 - Aggregates and Grouping.ipynb
+++ b/pandas/04 - Aggregates and Grouping.ipynb
@@ -9,16 +9,18 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "\n",
     "def get_csv_df():\n",
     "    return pd.read_csv('titanic.csv', index_col=\"PassengerId\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "90102ad9",
    "metadata": {},
    "source": [
-    "## GroupBy"
+    "## GroupBy\n"
    ]
   },
   {
@@ -468,11 +470,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2825509b",
    "metadata": {},
    "source": [
-    "## Sorting"
+    "## Sorting\n"
    ]
   },
   {
@@ -740,11 +743,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f2cdd306",
    "metadata": {},
    "source": [
-    "## Concat"
+    "## Concat\n"
    ]
   },
   {
@@ -1001,11 +1005,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9724d32c",
    "metadata": {},
    "source": [
-    "## Column Values"
+    "## Column Values\n"
    ]
   },
   {
@@ -1930,11 +1935,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f185a229",
    "metadata": {},
    "source": [
-    "## Iterating Rows"
+    "## Iterating Rows\n"
    ]
   },
   {
