--- a/TensorFlow/Tensor Shapes & Routing.ipynb
+++ b/TensorFlow/Tensor Shapes & Routing.ipynb
@@ -16,7 +16,7 @@
    "id": "d41d7981",
    "metadata": {},
    "source": [
-    "## Scalar"
+    "## Scalar\n"
    ]
   },
   {
@@ -43,9 +43,10 @@
     "print(scalar + scalar)\n",
     "print(scalar + 1)\n",
     "\n",
-    "print(scalar.numpy()) # Get back the actual scalar value\n",
+    "print(scalar.numpy())  # Get back the actual scalar value\n",
     "\n",
-    "print(tf.reshape(scalar, shape=(1)).numpy()) # Can reshape into a tensor of 1 element"
+    "print(tf.reshape(scalar,\n",
+    "                 shape=(1)).numpy())  # Can reshape into a tensor of 1 element\n"
    ]
   },
   {
@@ -54,7 +55,7 @@
    "id": "3729e34b",
    "metadata": {},
    "source": [
-    "## Vector"
+    "## Vector\n"
    ]
   },
   {
@@ -82,7 +83,7 @@
    "id": "1c5a2a1d",
    "metadata": {},
    "source": [
-    "## Matrix"
+    "## Matrix\n"
    ]
   },
   {
@@ -105,7 +106,7 @@
     }
    ],
    "source": [
-    "matrix = tf.zeros(shape=(5,5))\n",
+    "matrix = tf.zeros(shape=(5, 5))\n",
     "print(matrix)"
    ]
   },
@@ -117,7 +118,7 @@
    "source": [
     "## Slicing\n",
     "\n",
-    "Basically, single indices tend to make that dimension go away while slices tend to maintain the original form."
+    "Basically, single indices tend to make that dimension go away while slices tend to maintain the original form.\n"
    ]
   },
   {
@@ -138,11 +139,13 @@
     }
    ],
    "source": [
-    "matrix = tf.zeros(shape=(5,5))\n",
+    "matrix = tf.zeros(shape=(5, 5))\n",
     "print(f'Single Column Index: {matrix[:,1].shape}')\n",
     "print(f'Multi-Column Index: {matrix[:,1:2].shape}')\n",
-    "print(f'Single Row Index: {matrix[1].shape}')  # Notice it's the same shape as single column index\n",
-    "print(f'Multi-Row Index: {matrix[1:2].shape}') # Notice it's the transpose of single column index"
+    "print(f'Single Row Index: {matrix[1].shape}'\n",
+    "     )  # Notice it's the same shape as single column index\n",
+    "print(f'Multi-Row Index: {matrix[1:2].shape}'\n",
+    "     )  # Notice it's the transpose of single column index\n"
    ]
   },
   {
@@ -153,7 +156,7 @@
    "source": [
     "## Dictionary\n",
     "\n",
-    "Although in certain places in TF (eg. dataset), shapes can be dictionaries, this is not generally allowed."
+    "Although in certain places in TF (eg. dataset), shapes can be dictionaries, this is not generally allowed.\n"
    ]
   },
   {
@@ -183,7 +186,7 @@
    "id": "76bfaa9b",
    "metadata": {},
    "source": [
-    "If you wanted to do it in the general case, this is the best you can do."
+    "If you wanted to do it in the general case, this is the best you can do.\n"
    ]
   },
   {
@@ -206,7 +209,7 @@
     }
    ],
    "source": [
-    "dictionary = {'field1': tf.zeros(shape=(5,5)), 'field2': tf.zeros(shape=())}\n",
+    "dictionary = {'field1': tf.zeros(shape=(5, 5)), 'field2': tf.zeros(shape=())}\n",
     "print(dictionary)"
    ]
   },
@@ -218,7 +221,7 @@
    "source": [
     "## Dictionary in Keras\n",
     "\n",
-    "Note the use of __input_shape__ instead of __input__."
+    "Note the use of **input_shape** instead of **input**.\n"
    ]
   },
   {
@@ -237,7 +240,10 @@
    ],
    "source": [
     "try:\n",
-    "    tf.keras.layers.Input(shape={'field1': (5, 5), 'field2': ()})  # This is also a no-go\n",
+    "    tf.keras.layers.Input(shape={\n",
+    "        'field1': (5, 5),\n",
+    "        'field2': ()\n",
+    "    })  # This is also a no-go\n",
     "except:\n",
     "    print('nope')"
    ]
@@ -248,7 +254,7 @@
    "id": "4298d15f",
    "metadata": {},
    "source": [
-    "You can use a dictionary to inform the constructor of tf.keras.Model how to unwrap its input (a dictionary here)."
+    "You can use a dictionary to inform the constructor of tf.keras.Model how to unwrap its input (a dictionary here).\n"
    ]
   },
   {
@@ -289,13 +295,25 @@
    "source": [
     "input1 = tf.keras.layers.Input(shape=(5, 5))\n",
     "input2 = tf.keras.layers.Input(shape=())\n",
-    "inputs = {'field1': input1, 'field2': input2} # Only used for the final step (use input1 and input2 in graph)\n",
-    "outputs = tf.keras.layers.Dense(3)(input1)  # Technically input2 is being ignored in this network but just example\n",
+    "inputs = {\n",
+    "    'field1': input1,\n",
+    "    'field2': input2\n",
+    "}  # Only used for the final step (use input1 and input2 in graph)\n",
+    "outputs = tf.keras.layers.Dense(3)(\n",
+    "    input1\n",
+    ")  # Technically input2 is being ignored in this network but just example\n",
     "\n",
-    "model = tf.keras.Model(inputs=inputs, outputs=outputs)  # The dictionary is not a tensor but is an outer structure for tensors\n",
-    "print(model.input_shape)  # The shape looks like the one you specified but a batch dimension is added to all tensors\n",
+    "model = tf.keras.Model(\n",
+    "    inputs=inputs, outputs=outputs\n",
+    ")  # The dictionary is not a tensor but is an outer structure for tensors\n",
+    "print(\n",
+    "    model.input_shape\n",
+    ")  # The shape looks like the one you specified but a batch dimension is added to all tensors\n",
     "\n",
-    "model({'field1': tf.zeros(shape=(2,5,5)), 'field2': tf.zeros(shape=(2))})  # The model accepts a straight dictionary of tensors."
+    "model({\n",
+    "    'field1': tf.zeros(shape=(2, 5, 5)),\n",
+    "    'field2': tf.zeros(shape=(2))\n",
+    "})  # The model accepts a straight dictionary of tensors.\n"
    ]
   },
   {
@@ -306,9 +324,9 @@
    "source": [
     "## Multiple Tensor Inputs/Outputs in Keras\n",
     "\n",
-    "This is useful if you need to pass in tensors of __different forms__ without using ragged tensors.\n",
+    "This is useful if you need to pass in tensors of **different forms** without using ragged tensors.\n",
     "\n",
-    "List of tensors in, list of tensors out."
+    "List of tensors in, list of tensors out.\n"
    ]
   },
   {
@@ -366,7 +384,7 @@
     "model = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
     "print(f'Input Shape: {model.input_shape}')\n",
     "\n",
-    "t = tf.zeros(shape=(10, 5)) # Batch size 10\n",
+    "t = tf.zeros(shape=(10, 5))  # Batch size 10\n",
     "u = tf.zeros(shape=(10, 3))\n",
     "\n",
     "model([t, u])"
@@ -382,9 +400,9 @@
     "\n",
     "The ChatGPT-approved version uses tf.keras.layers.Lambda, which is not recommended because if you save the model, it saves environment-specific bytecode.\n",
     "\n",
-    "A key thing to note here is that your layer can __return a tuple__ and each items in the tuple is a graph node.\n",
+    "A key thing to note here is that your layer can **return a tuple** and each items in the tuple is a graph node.\n",
     "\n",
-    "NOTE: I did it this way to demonstrate layer classes, but you could just do tensor operations too (which I didn't know when I made this cell)."
+    "NOTE: I did it this way to demonstrate layer classes, but you could just do tensor operations too (which I didn't know when I made this cell).\n"
    ]
   },
   {
@@ -423,14 +441,18 @@
    ],
    "source": [
     "class SplitLayer(tf.keras.layers.Layer):\n",
+    "\n",
     "    def __init__(self):\n",
-    "      super().__init__()\n",
-    "      \n",
+    "        super().__init__()\n",
+    "\n",
     "    def call(self, inputs):\n",
-    "      return (inputs[:,:5], inputs[:,5:])  # You could skip the whole class and just do left,right = (inputs....\n",
+    "        return (\n",
+    "            inputs[:, :5], inputs[:, 5:]\n",
+    "        )  # You could skip the whole class and just do left,right = (inputs....\n",
+    "\n",
     "\n",
     "inputs = tf.keras.layers.Input(shape=(8))  # Take all 8 columns in input tensor\n",
-    "left,right = SplitLayer()(inputs)  # Split the columns\n",
+    "left, right = SplitLayer()(inputs)  # Split the columns\n",
     "dense1 = tf.keras.layers.Dense(2, name='dense_2')(left)\n",
     "dense2 = tf.keras.layers.Dense(4, name='dense_4')(right)\n",
     "\n",
@@ -438,7 +460,7 @@
     "model = tf.keras.Model(inputs=inputs, outputs=output)\n",
     "print(f'Input Shape: {model.input_shape}')\n",
     "\n",
-    "t = tf.zeros(shape=(10, 8)) # Batch size 10\n",
+    "t = tf.zeros(shape=(10, 8))  # Batch size 10\n",
     "\n",
     "model(t)"
    ]
@@ -451,7 +473,7 @@
    "source": [
     "## Dictionary to Tensor Routing\n",
     "\n",
-    "In this example, we take an input dictionary with a one-hot feature and a scalar feature, and return a more typical matrix tensor compatible with dense layers, etc."
+    "In this example, we take an input dictionary with a one-hot feature and a scalar feature, and return a more typical matrix tensor compatible with dense layers, etc.\n"
    ]
   },
   {
@@ -472,14 +494,24 @@
     }
    ],
    "source": [
-    "input1 = tf.keras.layers.Input(shape=(5), name='input1')  # Each item in batch is a 5 item array (eg. one-hot)\n",
-    "input2 = tf.keras.layers.Input(shape=(), name='input2')      # Each item in batch is a scalar\n",
-    "inputs = {'oh': input1, 'scal': input2}      # Input is a dictionary of batched tensors\n",
+    "input1 = tf.keras.layers.Input(\n",
+    "    shape=(5),\n",
+    "    name='input1')  # Each item in batch is a 5 item array (eg. one-hot)\n",
+    "input2 = tf.keras.layers.Input(shape=(),\n",
+    "                               name='input2')  # Each item in batch is a scalar\n",
+    "inputs = {\n",
+    "    'oh': input1,\n",
+    "    'scal': input2\n",
+    "}  # Input is a dictionary of batched tensors\n",
     "\n",
-    "output = tf.keras.layers.Concatenate(axis=-1, name='concat')([input1, tf.expand_dims(input2, axis=-1)])\n",
+    "output = tf.keras.layers.Concatenate(\n",
+    "    axis=-1, name='concat')([input1, tf.expand_dims(input2, axis=-1)])\n",
     "model = tf.keras.Model(inputs=inputs, outputs=output, name='bla')\n",
     "\n",
-    "model({'oh': tf.constant([[1, 0, 0, 0, 0]]), 'scal': tf.constant([6])}) # Note that passing naked arrays fails here"
+    "model({\n",
+    "    'oh': tf.constant([[1, 0, 0, 0, 0]]),\n",
+    "    'scal': tf.constant([6])\n",
+    "})  # Note that passing naked arrays fails here\n"
    ]
   },
   {
@@ -488,7 +520,7 @@
    "id": "dbf104d4",
    "metadata": {},
    "source": [
-    "## Batch Size"
+    "## Batch Size\n"
    ]
   },
   {
@@ -497,7 +529,7 @@
    "id": "73cd11fd",
    "metadata": {},
    "source": [
-    "Layers are constructed without the batch dimension in the shape, but __after construction__ they have it."
+    "Layers are constructed without the batch dimension in the shape, but **after construction** they have it.\n"
    ]
   },
   {
@@ -515,7 +547,8 @@
     }
    ],
    "source": [
-    "input1 = tf.keras.layers.Input(shape=(5)) ## Constructed without batch dimension\n",
+    "input1 = tf.keras.layers.Input(\n",
+    "    shape=(5))  ## Constructed without batch dimension\n",
     "print(f'Input Shape: {input1.shape}')  ## Batch dimension added in front"
    ]
   },
@@ -525,8 +558,8 @@
    "id": "01d10f40",
    "metadata": {},
    "source": [
-    "For a __dictionary__, the batch size is added to __each field separately__.\n",
-    "Also note that you have to __call with a batch__."
+    "For a **dictionary**, the batch size is added to **each field separately**.\n",
+    "Also note that you have to **call with a batch**.\n"
    ]
   },
   {
@@ -565,7 +598,10 @@
     "\n",
     "model = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
     "\n",
-    "model({'field1': tf.zeros(shape=(2,5,5)), 'field2': tf.zeros(shape=(2))}) # Batch added to each field"
+    "model({\n",
+    "    'field1': tf.zeros(shape=(2, 5, 5)),\n",
+    "    'field2': tf.zeros(shape=(2))\n",
+    "})  # Batch added to each field\n"
    ]
   },
   {
@@ -574,7 +610,7 @@
    "id": "b8a11217",
    "metadata": {},
    "source": [
-    "For a __list of tensors__, the batch size is added to __each entry separately__."
+    "For a **list of tensors**, the batch size is added to **each entry separately**.\n"
    ]
   },
   {
@@ -624,7 +660,7 @@
     "outputs = [output1, output2]\n",
     "model = tf.keras.Model(inputs=inputs, outputs=outputs)\n",
     "\n",
-    "t = tf.zeros(shape=(10, 5)) # Batch size 10\n",
+    "t = tf.zeros(shape=(10, 5))  # Batch size 10\n",
     "u = tf.zeros(shape=(10, 3))\n",
     "\n",
     "model([t, u])"
@@ -636,7 +672,7 @@
    "id": "bbf5c62d",
    "metadata": {},
    "source": [
-    "Also note that if you use a __layer class__ the __call()__ method will take batched tensors(s) as well.  Basically once you instantiate a layer, everything has batches from that point on."
+    "Also note that if you use a **layer class** the **call()** method will take batched tensors(s) as well. Basically once you instantiate a layer, everything has batches from that point on.\n"
    ]
   },
   {
@@ -645,7 +681,7 @@
    "id": "cb492ec6",
    "metadata": {},
    "source": [
-    "## Graph Mode"
+    "## Graph Mode\n"
    ]
   },
   {
@@ -654,7 +690,7 @@
    "id": "e4f29156",
    "metadata": {},
    "source": [
-    "A layer can be called on a concrete tensor for __eager mode__ evaluation."
+    "A layer can be called on a concrete tensor for **eager mode** evaluation.\n"
    ]
   },
   {
@@ -684,7 +720,7 @@
    "id": "3973db1e",
    "metadata": {},
    "source": [
-    "The same layer can also be called on a graph node for __graph mode__ evaluation. Note that what you get back is still a tensor, but of a different type (__KerasTensor__). You can examine properties such as __shape__.  Note that any dimension that is not known at the time the graph is being built can be __None__ (for instance the batch size dimension).  You can __pass None yourself__ for dimensions when applicable too."
+    "The same layer can also be called on a graph node for **graph mode** evaluation. Note that what you get back is still a tensor, but of a different type (**KerasTensor**). You can examine properties such as **shape**. Note that any dimension that is not known at the time the graph is being built can be **None** (for instance the batch size dimension). You can **pass None yourself** for dimensions when applicable too.\n"
    ]
   },
   {
@@ -703,7 +739,7 @@
     }
    ],
    "source": [
-    "input_layer = tf.keras.layers.Input(shape=(5)) # Graph mode tensor\n",
+    "input_layer = tf.keras.layers.Input(shape=(5))  # Graph mode tensor\n",
     "t = tf.keras.layers.Dense(2)(input_layer)\n",
     "print(t)  # Another tensor\n",
     "print(t.shape)"
@@ -715,7 +751,7 @@
    "id": "191357e8",
    "metadata": {},
    "source": [
-    "You can perform __arbitrary tensor operations__ in a graph too and that will get included in the graph.  It won't disrupt anything such as GPU execution."
+    "You can perform **arbitrary tensor operations** in a graph too and that will get included in the graph. It won't disrupt anything such as GPU execution.\n"
    ]
   },
   {
@@ -734,8 +770,8 @@
     }
    ],
    "source": [
-    "input_layer = tf.keras.layers.Input(shape=(5)) # Graph mode tensor\n",
-    "output_layer = input_layer ** 2  # Could also be something like tf.reshape\n",
+    "input_layer = tf.keras.layers.Input(shape=(5))  # Graph mode tensor\n",
+    "output_layer = input_layer**2  # Could also be something like tf.reshape\n",
     "model = tf.keras.Model(inputs=input_layer, outputs=output_layer)\n",
     "\n",
     "result = model(tf.constant([[1, 2, 3, 4, 5]]))\n",
@@ -749,13 +785,13 @@
    "id": "0e4ab2ec",
    "metadata": {},
    "source": [
-    "You can __compile a function__ to a graph (eg. custom helper code inside a training loop) using @tf.function.\n",
+    "You can **compile a function** to a graph (eg. custom helper code inside a training loop) using @tf.function.\n",
     "\n",
-    "The example here doesn't work as I expected, but usually in coursera courses tf.function is used for a custom __training loop step__ so that each training step runs faster (as an optimized graph instead of python).\n",
+    "The example here doesn't work as I expected, but usually in coursera courses tf.function is used for a custom **training loop step** so that each training step runs faster (as an optimized graph instead of python).\n",
     "\n",
-    "The tracing/compilation happens on the __first call__ so if only called once, it's worthless to do.  Also, it's only worthwhile if there are a lot of small operations.  It won't help at all if all you're doing is convolutions.\n",
+    "The tracing/compilation happens on the **first call** so if only called once, it's worthless to do. Also, it's only worthwhile if there are a lot of small operations. It won't help at all if all you're doing is convolutions.\n",
     "\n",
-    "NOTE: this would not be needed for a function that creates your model because operaitons on graph mode tensors already result in a graph, and it's only happening once."
+    "NOTE: this would not be needed for a function that creates your model because operaitons on graph mode tensors already result in a graph, and it's only happening once.\n"
    ]
   },
   {
@@ -777,9 +813,10 @@
     "def make_graph_tensor():\n",
     "    return tf.constant([1, 2, 3])\n",
     "\n",
+    "\n",
     "print(make_graph_tensor())\n",
     "\n",
-    "input_layer = tf.keras.layers.Input(shape=(5)) # Graph mode tensor"
+    "input_layer = tf.keras.layers.Input(shape=(5))  # Graph mode tensor\n"
    ]
   },
   {
