--- a/TensorFlow/Dataset.ipynb
+++ b/TensorFlow/Dataset.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "id": "b5ab3f3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 08:43:14.026229: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-05-19 08:43:14.967209: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -99,6 +109,49 @@
     "dataset = make_dataset()\n",
     "for batch in dataset:\n",
     "    print(batch)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "60b61ebe",
+   "metadata": {},
+   "source": [
+    "You can collect the batches in-memory all at once for simple cases this way, just like with a normal iterator.\n",
+    "\n",
+    "If it's a simple tensor dataset, you can concatenate to one big tensors with all the samples.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "daab1078",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Tensor: shape=(3,), dtype=int32, numpy=array([1, 2, 3], dtype=int32)>, <tf.Tensor: shape=(3,), dtype=int32, numpy=array([4, 5, 6], dtype=int32)>, <tf.Tensor: shape=(3,), dtype=int32, numpy=array([7, 8, 9], dtype=int32)>]\n",
+      "\n",
+      "tf.Tensor([1 2 3 4 5 6 7 8 9], shape=(9,), dtype=int32)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-19 08:45:20.468667: I tensorflow/core/common_runtime/executor.cc:1197] [/device:CPU:0] (DEBUG INFO) Executor start aborting (this does not indicate an error and you can ignore this message): INVALID_ARGUMENT: You must feed a value for placeholder tensor 'Placeholder/_0' with dtype int32 and shape [3,3]\n",
+      "\t [[{{node Placeholder/_0}}]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = make_dataset()\n",
+    "print(list(dataset))\n",
+    "\n",
+    "print()\n",
+    "print(tf.concat(list(dataset), axis=0))"
    ]
   },
   {
@@ -1044,7 +1097,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
