--- a/TensorFlow/Tensor Shapes & Routing.ipynb
+++ b/TensorFlow/Tensor Shapes & Routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6b0d4f7b",
    "metadata": {},
    "outputs": [],
@@ -820,9 +820,74 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "62b3a4dc",
+   "metadata": {},
+   "source": [
+    "## Concat vs. Stack\n",
+    "\n",
+    "Although they look the same, they are not the same.\n",
+    "\n",
+    "**Concat** stacks along an **existing axis**.\n",
+    "\n",
+    "**Stack** puts in a **new axis** for the purpose of stacking.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "428a0471",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 1), dtype=float32, numpy=\n",
+       "array([[0.],\n",
+       "       [0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.concat([tf.zeros((1, 1)), tf.zeros((1, 1))], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4f735c87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 1, 1), dtype=float32, numpy=\n",
+       "array([[[0.]],\n",
+       "\n",
+       "       [[0.]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.stack([tf.zeros((\n",
+    "    1,\n",
+    "    1,\n",
+    ")), tf.zeros((1, 1))], axis=0)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbac7389",
+   "id": "3a3fc716",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -844,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
