Adding special objects snippets.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1509,9 +1509,39 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "62d09a7d",
+   "metadata": {},
+   "source": [
+    "# Declaration Order\n",
+    "\n",
+    "Within bodies of classes and functions, you are ok to reference symbols that haven't happened yet. They won't be resolved until the thing is called.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9e37a2bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AClass:\n",
+    "\n",
+    "    def f():\n",
+    "        return BClass()\n",
+    "\n",
+    "\n",
+    "class BClass:\n",
+    "\n",
+    "    def f():\n",
+    "        return AClass()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62976957",
+   "id": "0f87709e",
    "metadata": {},
    "outputs": [],
    "source": []
